--- a/data/popup/index.html
+++ b/data/popup/index.html
@@ -19,7 +19,7 @@
   <template id="result">
     <div class="result">
       <a href="" data-cmd="open">
-        <h2 dir="auto"><img><span></span><code></code></h2>
+        <h2 dir="auto"><img><span data-id="title"></span><span data-id="number" title="Press Ctrl + #n or Command + #n to open"></span><code></code></h2>
         <cite></cite>
       </a>
       <p></p>
