--- a/data/popup/index.html
+++ b/data/popup/index.html
@@ -19,15 +19,31 @@
   <template id="result">
     <div class="result">
       <a href="" data-cmd="open">
-        <h2 dir="auto"><img><span data-id="title"></span><span data-id="number" title="Press Ctrl + #n or Command + #n to open"></span><code></code></h2>
+        <h2 dir="auto"><img><span data-id="title"></span><span data-id="type" title="belongs to an iframe element"></span><span data-id="number" title="Press Ctrl + #n or Command + #n to open"></span><code></code></h2>
         <cite></cite>
       </a>
       <p></p>
     </div>
   </template>
+  <form id="internal" class="hidden">
+    <span id="internal-close">×</span>
+    Index title and URL of internal tabs? <input type="submit" value="Permit">
+  </form>
+  <div id="guide" class="hidden">
+    <span id="guide-close">×</span>
+    <ul>
+      <li>Available keywords: <code>hostname</code>, <code>title</code>, <code>mime</code>, <code>url</code>, <code>date</code>, <code>filename</code>, <code>language</code>, <code>keyword</code>, <code>description</code></li>
+      <li>Press ENTER key on the search box to switch to the first matched tab and close this window</li>
+      <li>Press SHIFT + ENTER on the search box detach all the matching tabs and group them as a new window</li>
+      <li>Press CTRL + # or COMMAND + # on the search box to switch to the #th matched tab (# is between 1 to 9)</li>
+      <li>Press CTRL + D on the search box to copy all the URLs to the clipboard</li>
+    </ul>
+  </div>
   <div id="info"></div>
   <div id="results" data-empty="Type a query to start searching"></div>
 
+  <script src="../xapian.js"></script>
   <script defer src="index.js"></script>
+  <script defer src="../xapian/xapian_noexception_nowasm.js"></script>
 </body>
 </html>
