adding lunr search engine

--- a/data/popup/index.html
+++ b/data/popup/index.html
@@ -42,8 +42,6 @@
   <div id="info"></div>
   <div id="results" data-empty="Type a query to start searching"></div>
 
-  <script src="../xapian.js"></script>
-  <script defer src="index.js"></script>
-  <script defer src="../xapian/xapian_noexception_nowasm.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
