--- a/data/popup/index.html
+++ b/data/popup/index.html
@@ -42,6 +42,7 @@
   <div id="info"></div>
   <div id="results" data-empty="Type a query to start searching"></div>
 
+  <script src="parser/pdf.js"></script>
   <script src="index.js"></script>
 </body>
 </html>
