--- a/v3/data/popup/index.html
+++ b/v3/data/popup/index.html
@@ -47,7 +47,7 @@
     </ul>
   </div>
   <div id="info"></div>
-  <div id="results" data-empty="Type a query to start searching"></div>
+  <div id="results" data-empty="Your search query is performed when indexing is over..."></div>
 
   <script src="parser/pdf.js"></script>
   <script src="index.js"></script>
