--- a/v3/data/popup/index.html
+++ b/v3/data/popup/index.html
@@ -18,6 +18,7 @@
   </header>
   <template id="result">
     <div class="result">
+      <input type="radio" name="search">
       <a href="" data-cmd="open">
         <h2 dir="auto">
           <img>
