--- a/v3/data/popup/index.html
+++ b/v3/data/popup/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="index.css">
+  <title>Search all Tabs</title>
 </head>
 <body>
   <header>
