--- a/v3/data/popup/index.html
+++ b/v3/data/popup/index.html
@@ -47,18 +47,20 @@
   <div id="info-bar">
     <a href="#" data-cmd="faqs" title="Ctrl + Shift + F or Command + Shift + F"><u>F</u>AQs</a>
     <a href="#" data-cmd="shortcuts" title="Ctrl + Shift + S or Command + Shift + S"><u>S</u>hortcuts</a>
+    <a href="#" data-cmd="rate" data-hide=true id="rate">Rate Me</a>
     <div class="select">
       <a href="#" data-cmd="select-all" title="Ctrl + Shift + A or Command + Shift + A">Select <u>A</u>ll</a> / <a href="#" data-cmd="select-none" title="Ctrl + Shift + N or Command + Shift + N"><u>N</u>one</a>
     </div>
     <span id="info"></span>
     <div id="tools">
-      <button data-cmd="group" title="Ctrl + Shift + G or Command + Shift + G"><u>G</u>roup Tabs</button>
-      <button data-cmd="delete" title="Ctrl + Shift + C or Command + Shift + C"><u>C</u>lose Tabs</button>
+      <button class="button" data-cmd="group" title="Ctrl + Shift + G or Command + Shift + G"><u>G</u>roup Tabs</button>
+      <button class="button" data-cmd="delete" title="Ctrl + Shift + C or Command + Shift + C"><u>C</u>lose Tabs</button>
     </div>
   </div>
   <div id="results" data-empty="Your search query is performed when indexing is over..."></div>
 
   <script src="parser/pdf.js"></script>
   <script src="index.js"></script>
+  <script src="rate.js"></script>
 </body>
 </html>
