--- a/v3/data/popup/index.html
+++ b/v3/data/popup/index.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <link rel="stylesheet" type="text/css" href="index.css">
   <title>Search all Tabs</title>
+  <link rel="icon" type="image/png" href="/data/icons/32.png">
 </head>
 <body data-size="-1" data-menu=false>
   <header>
