Add filter functionality and logger implementation to popup interface

--- a/v3.new/data/options/index.html
+++ b/v3.new/data/options/index.html
@@ -43,6 +43,7 @@
     <input type="button" value="Save Options" id="save">
     <span id="toast"></span>
   </p>
+  <script src="../logger.js"></script>
   <script src="index.js"></script>
 </body>
 </html>
