--- a/v3.new/data/popup/index.html
+++ b/v3.new/data/popup/index.html
@@ -14,6 +14,30 @@
         <svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z"></path></svg>
       </button>
     </form>
+    <div id="filter-controls">
+      <button id="filter-toggle" title="Filter results by source">
+        <span id="filter-icon">🔗</span>
+        <span id="filter-text">All</span>
+        <span id="filter-arrow">▼</span>
+      </button>
+      <div id="filter-menu" class="hidden">
+        <div class="filter-option active" data-filter="all">
+          <span class="filter-icon">🔗</span>
+          <span>All Results</span>
+          <span class="filter-count" id="count-all">0</span>
+        </div>
+        <div class="filter-option" data-filter="tabs">
+          <span class="filter-icon">📑</span>
+          <span>Active Tabs</span>
+          <span class="filter-count" id="count-tabs">0</span>
+        </div>
+        <div class="filter-option" data-filter="history">
+          <span class="filter-icon">🕒</span>
+          <span>Browser History</span>
+          <span class="filter-count" id="count-history">0</span>
+        </div>
+      </div>
+    </div>
   </header>
   <template id="result">
     <div class="result">
@@ -60,6 +84,7 @@
   </div>
   <div id="results" data-empty="Your search query is performed when indexing is over..."></div>
 
+  <script type="text/javascript" src="/data/logger.js"></script>
   <script type="text/javascript" src="/data/xapian/connect.js"></script>
   <script type="text/javascript" src="/data/xapian/xapian_noexception_wasm_db.js"></script>
   <script type="text/javascript" src="parser/pdf.js"></script>
